[package]
name = "envoy-sdk-test"
version = "0.0.1"
authors = ["Tetrate Labs <tetratelabs@tetrate.io>"]
description = "Deprecated. Rust SDK for WebAssembly-based Envoy extensions"
license = "Apache-2.0"
repository = "https://github.com/tetratelabs/envoy-wasm-rust-sdk/"
readme = "README.md"
keywords = ["envoy", "extension", "wasm"]
categories = ["wasm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
envoy = { path = "../envoy-sdk", package = "envoy-sdk" }

[dev-dependencies]
version-sync = "0.9"

[badges]
# Note: This is not used by crates.io, yet. The only way to change crates.io at the moment is yanking.
# See https://github.com/rust-lang/crates.io/issues/2437
maintenance = { status = "deprecated" }