[package]
name = "envoy-sdk"
version = "0.0.3-alpha1"
authors = ["Tetrate Labs <tetratelabs@tetrate.io>"]
description = "Rust SDK for WebAssembly-based Envoy extensions"
license = "Apache-2.0"
repository = "https://github.com/tetratelabs/envoy-wasm-rust-sdk/"
readme = "README.md"
keywords = ["envoy", "extension", "wasm"]
categories = ["wasm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[features]
# Default set of optional packages.
# Most people will want to use these packages, but they are strictly optional.
default = ["log"]

[dependencies]
proxy-wasm = { package = "proxy-wasm-experimental", version = "0.1.0-alpha.4" }

# List of optional dependencies that get enabled by `features`.
log = { version = "0.4", optional = true }

[dev-dependencies]
version-sync = "0.9"
