[package]
name = "access-logger"
version = "0.0.0"
authors = ["Tetrate Labs <tetratelabs@tetrate.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
log = "0.4"
envoy-sdk = { path = "../../envoy-sdk" }
proxy-wasm = { git = "https://github.com/yskopets/proxy-wasm-rust-sdk", branch = "latest" }
extension-abi-memory = { path = "../../support/extension-abi-memory" }

[dev-dependencies]
envoy-abi-stubs = { path = "../../support/envoy-abi-stubs" }

[features]
default = ["malloc"]
malloc = []
