[package]
name = "http-filter"
version = "0.0.1"
authors = ["Tetrate Labs <tetratelabs@tetrate.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
chrono = "0.4"
log = "0.4"
envoy-sdk = { path = "../../envoy-sdk" }
proxy-wasm = { package="proxy-wasm-experimental", version = "0.1.0-alpha.2" }
