[package]
name = "network-filter"
version = "0.0.1"
authors = ["Tetrate Labs <tetratelabs@tetrate.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
envoy-sdk = { path = "../../envoy-sdk" }
proxy-wasm = { package="proxy-wasm-experimental", version = "0.1.0-alpha.3" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
