[package]
name = "network-filter"
version = "0.0.3-alpha1"
authors = ["Tetrate Labs <tetratelabs@tetrate.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
envoy = { path = "../../envoy-sdk", package = "envoy-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
