[package]
name = "http-filter-module"
version = "0.0.3-alpha1"
authors = ["Tetrate Labs <tetratelabs@tetrate.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
http-filter = { path = "../.." }
envoy = { path = "../../../../envoy-sdk", package = "envoy-sdk" }
